# solana-rv-example

./: README.md  Solana_Architecture_Prompt.md
solana-program/: Cargo.toml
solana-program/src/: lib.rs
solana-typescript/: remote-viewing-sdk.ts  solana-transaction-decoders.ts  types.ts
